// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`breadcrumb demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <nav
        class="ant-breadcrumb semantic-mark-root css-var-v-0"
      >
        <ol>
          <li
            class="ant-breadcrumb-item semantic-mark-item"
          >
            <a
              class="ant-breadcrumb-link"
              href=""
            >
              <span
                aria-label="home"
                class="anticon anticon-home"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="home"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
                  />
                </svg>
              </span>
            </a>
          </li>
          <li
            class="ant-breadcrumb-separator semantic-mark-separator"
          >
            /
          </li>
          <li
            class="ant-breadcrumb-item semantic-mark-item"
          >
            <a
              class="ant-breadcrumb-link"
              href=""
            >
              <span
                aria-label="user"
                class="anticon anticon-user"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="user"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                  />
                </svg>
              </span>
              <span>
                Application List
              </span>
            </a>
          </li>
          <li
            class="ant-breadcrumb-separator semantic-mark-separator"
          >
            /
          </li>
          <li
            class="ant-breadcrumb-item semantic-mark-item"
          >
            <span
              class="ant-breadcrumb-link"
            >
              Application
            </span>
          </li>
          <!---->
        </ol>
      </nav>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element with text color, font size, icon size and other basic styles, using flex layout with ordered list
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  item
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Item element with text color, link color transitions, hover effects, padding, border-radius, height, and margin styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  separator
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Separator element with margin and color styles for the divider
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`breadcrumb demo > renders basic correctly 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Home
      </span>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        Application Center
      </a>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        Application List
      </a>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        An Application
      </span>
    </li>
    <!---->
  </ol>
</nav>
`;

exports[`breadcrumb demo > renders debug-routes correctly 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href="#/home"
      >
        Home
      </a>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-overlay-link ant-dropdown-trigger"
      >
        <a
          class="ant-breadcrumb-link"
          href="#/home/user"
        >
          User
        </a>
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
      <!---->
    </li>
    <!---->
  </ol>
</nav>
`;

exports[`breadcrumb demo > renders overlay correctly 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Antdv Next
      </span>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        Component
      </a>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-overlay-link ant-dropdown-trigger"
      >
        <a
          class="ant-breadcrumb-link"
          href=""
        >
          General
        </a>
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
      <!---->
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Button
      </span>
    </li>
    <!---->
  </ol>
</nav>
`;

exports[`breadcrumb demo > renders separator correctly 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Home
      </span>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      &gt;
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        Application Center
      </a>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      &gt;
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        Application List
      </a>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      &gt;
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        An Application
      </span>
    </li>
    <!---->
  </ol>
</nav>
`;

exports[`breadcrumb demo > renders separator-component correctly 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Location
      </span>
    </li>
    <!---->
    <li
      class="ant-breadcrumb-separator"
    >
      :
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        Application Center
      </a>
    </li>
    <!---->
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        Application List
      </a>
    </li>
    <!---->
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        An Application
      </span>
    </li>
    <!---->
  </ol>
</nav>
`;

exports[`breadcrumb demo > renders style-class correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
  data-v-34f9aa07=""
>
  <nav
    aria-label="Breadcrumb with Object"
    class="ant-breadcrumb demo-breadcrumb-root css-var-root"
    data-v-34f9aa07=""
    style="border: 1px solid rgb(240, 240, 240); padding: 8px; border-radius: 4px;"
  >
    <ol>
      <li
        class="ant-breadcrumb-item demo-breadcrumb-item"
        style="color: rgb(24, 144, 255);"
      >
        <span
          class="ant-breadcrumb-link"
        >
          Antdv Next
        </span>
      </li>
      <li
        class="ant-breadcrumb-separator demo-breadcrumb-separator"
        style="color: rgba(0, 0, 0, 0.45);"
      >
        /
      </li>
      <li
        class="ant-breadcrumb-item demo-breadcrumb-item"
        style="color: rgb(24, 144, 255);"
      >
        <span
          class="ant-breadcrumb-link"
        >
          Component
        </span>
      </li>
      <!---->
    </ol>
  </nav>
  <nav
    aria-label="Breadcrumb with Function"
    class="ant-breadcrumb demo-breadcrumb-root css-var-root"
    data-v-34f9aa07=""
    style="border: 1px solid rgb(245, 239, 255); padding: 8px; border-radius: 4px;"
  >
    <ol>
      <li
        class="ant-breadcrumb-item demo-breadcrumb-item"
        style="color: rgb(143, 135, 241);"
      >
        <span
          class="ant-breadcrumb-link"
        >
          Antdv Next
        </span>
      </li>
      <li
        class="ant-breadcrumb-separator demo-breadcrumb-separator"
      >
        /
      </li>
      <li
        class="ant-breadcrumb-item demo-breadcrumb-item"
        style="color: rgb(143, 135, 241);"
      >
        <span
          class="ant-breadcrumb-link"
        >
          Component
        </span>
      </li>
      <li
        class="ant-breadcrumb-separator demo-breadcrumb-separator"
      >
        /
      </li>
      <li
        class="ant-breadcrumb-item demo-breadcrumb-item"
        style="color: rgb(143, 135, 241);"
      >
        <span
          class="ant-breadcrumb-link"
        >
          Breadcrumb
        </span>
      </li>
      <!---->
    </ol>
  </nav>
</div>
`;

exports[`breadcrumb demo > renders with-icon correctly 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        <span
          aria-label="home"
          class="anticon anticon-home"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="home"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
            />
          </svg>
        </span>
      </a>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        <span>
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
          <span>
             Application List
          </span>
        </span>
      </a>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Application
      </span>
    </li>
    <!---->
  </ol>
</nav>
`;

exports[`breadcrumb demo > renders with-params correctly 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Users
      </span>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        1
      </a>
    </li>
    <!---->
  </ol>
</nav>
`;

exports[`breadcrumb demo > renders withIcon correctly 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        <span
          aria-label="home"
          class="anticon anticon-home"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="home"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
            />
          </svg>
        </span>
      </a>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        <span
          aria-label="user"
          class="anticon anticon-user"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="user"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
            />
          </svg>
        </span>
        <span>
          Application List
        </span>
      </a>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Application
      </span>
    </li>
    <!---->
  </ol>
</nav>
`;

exports[`breadcrumb demo > renders withParams correctly 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Users
      </span>
    </li>
    <li
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        1
      </a>
    </li>
    <!---->
  </ol>
</nav>
`;
